@@ -1,6 +1,7 @@
 7/19/2001
 	- A string tokenizer bug caused TXT records with one string to be
 	  incorrectly parsed.  (David Blacka)
+	- Added Name.getLabelString().
 
 7/17/2001
 	- Started implementing Name.compareTo().  (loosely based on a
